<resources>
    <string name="app_name">Android UI widget Examples</string>
    <string name="action_settings">Settings</string>
    <string name="multiple_lines_of_text">When in the Course of human events, it becomes necessary for one people to dissolve the political bands which have connected them with another, and to assume among the powers of the earth, the separate and equal station to which the Laws of Nature and of Nature\'s God entitle them, a decent respect to the opinions of mankind requires that they should declare the causes which impel them to the separation.</string>
    <string name="this_is_a_text_view">This is a text view!</string>
    <string name="edit_text_hint">This Text Can be edited</string>
    <string name="text_examples">Text Examples</string>
    <string name="data_storage_instructions">Enter some text below and save it to a file</string>
    <string name="load_file">Load File</string>
    <string name="save_file">Save File</string>
    <string name="file_text_hint">Enter text to save to file here</string>
    <string name="file_name_hint">Enter File Name</string>
    <string name="internal_data_storage_example">Internal Data Storage Example</string>
    <string name="no_file_specified">Please specify a file name</string>
    <string name="file_does_not_exist">File \"%1$s\" does not exist</string>
    <string name="empty_file_not_allowed">Enter text to save to file</string>
    <string name="file_save_successful">Successfully saved \"%1$s\"</string>
</resources>
