<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.pdx.cs410J.android.examples.InternalDataStorageExample">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_storage_instructions"
        android:paddingTop="40dp"
        />

    <EditText
        android:id="@+id/FileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/file_name_hint"
        android:inputType="text"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/LoadFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_file"
            android:onClick="loadFile"
            />

        <Button
            android:id="@+id/SaveFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_file"
            android:onClick="saveFile"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/FileContents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/file_text_hint"
        android:lines="20"
        />

</LinearLayout>
